[package]
name = "loom-dl"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.54.0"
shuttle-runtime = "0.54.0"
tokio = { version = "1.26.0", features = ["full", "test-util"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
